# kxmlVersOpenFst

./: CMakeCache.txt  CMakeLists.txt  Makefile  MdT_Test.kxml  ProductionMdT  cmake_install.cmake  parserKXML.cpp
MdTPourTestCode/: MDT-Skitour_v6.kxml  MdT_Photos_v0.kxml  MdT_Test.kxml  MdT_Test_IterFils.kxml
openfst-1.5.0/: Makefile  config.status  libtool
openfst-1.5.0/src/: Makefile
openfst-1.5.0/src/extensions/: Makefile
openfst-1.5.0/src/extensions/compact/: Makefile
openfst-1.5.0/src/extensions/compress/: Makefile
openfst-1.5.0/src/extensions/const/: Makefile
openfst-1.5.0/src/extensions/far/: Makefile  farcompilestrings  farcreate  farequal  farextract  farinfo  farisomorphic  farprintstrings  farscript.lo  libfstfar.la  libfstfarscript.la  stlist.lo  strings.lo  sttable.lo
openfst-1.5.0/src/extensions/linear/: Makefile
openfst-1.5.0/src/extensions/lookahead/: Makefile
openfst-1.5.0/src/extensions/mpdt/: Makefile
openfst-1.5.0/src/extensions/ngram/: Makefile
openfst-1.5.0/src/extensions/pdt/: Makefile
openfst-1.5.0/src/extensions/python/: Makefile
openfst-1.5.0/src/include/: Makefile
openfst-1.5.0/src/lib/: Makefile  libfst.la
openfst-1.5.0/src/lib/.deps/: compat.Plo  flags.Plo  fst.Plo  mapped-file.Plo  properties.Plo  symbol-table-ops.Plo  symbol-table.Plo  util.Plo
openfst-1.5.0/src/lib/.libs/: libfst.1.dylib  libfst.lai
openfst-1.5.0/src/script/: Makefile  libfstscript.la
openfst-1.5.0/src/script/.deps/: arcsort.Plo  closure.Plo  compile.Plo  compose.Plo  (+39 more)
openfst-1.5.0/src/test/: Makefile  algo_test  fst_test  weight_test
(+29 files in other folders)
